@@ -7,6 +7,5 @@ unzip jenkinsfile-runner-1.0-beta-30.zip
 wget https://get.jenkins.io/war-stable/2.277.1/jenkins.war
 chmod -R 777 ./*
 # export JAVA_OPTS="-Djenkins.model.Jenkins.slaveAgentPort=50000 -Djenkins.model.Jenkins.slaveAgentPortEnforce=true -Dhudson.model.LoadStatistics.clock=1000"
-# sudo apt-get install default-jdk
-# sudo apt-get install default-jre
+export JAVA_OPTS="--illegal-access=permit $JAVA_OPTS"
 ./bin/jenkinsfile-runner -p plugins.txt -f Jenkinsfile
